implementada mecanica de compra

--- a/index.html
+++ b/index.html
@@ -53,19 +53,27 @@
                 <!--DIV ELEMENTO 1-->
                 <div class="conteudo_entidades_elementos_elemento">
                     <div class="conteudo_entidades_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                        <img src="./imagens/Juk-Shabb.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Juk-Shabb</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao">
+                            <p class="botaoTexto" id="valorCompra1">100</p>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra1')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 2-->
                 <div class="conteudo_entidades_elementos_elemento">
                     <div class="conteudo_entidades_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                        <img src="./imagens/ghizguth.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Ghizguth</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao">
+                            <p class="botaoTexto" id="valorCompra2">100</p>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra2')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 3-->
@@ -75,6 +83,10 @@
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Mordiggian</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao">
+                            <p class="botaoTexto" id="valorCompra3">100</p>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra3')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 4-->
@@ -84,6 +96,10 @@
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Hastur</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao">
+                            <p class="botaoTexto" id="valorCompra4">100</p>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra4')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 5-->
@@ -93,6 +109,10 @@
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Cthulhu</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao">
+                            <p class="botaoTexto" id="valorCompra5">100</p>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra5')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 6-->
@@ -102,6 +122,10 @@
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Ycnágnnisssz</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao">
+                            <p class="botaoTexto" id="valorCompra6">100</p>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra6')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 7-->
@@ -111,6 +135,10 @@
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Nyarlathotep</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao">
+                            <p class="botaoTexto" id="valorCompra7">100</p>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra7')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 8-->
@@ -120,6 +148,10 @@
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Shub-Niggurath</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao">
+                            <p class="botaoTexto" id="valorCompra8">100</p>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra8')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 9-->
@@ -129,6 +161,10 @@
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Yog-Sothoth</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao">
+                            <p class="botaoTexto" id="valorCompra9">100</p>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra9')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 10-->
@@ -138,6 +174,10 @@
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Azathoth</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao">
+                            <p class="botaoTexto" id="valorCompra10">100</p>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra10')">Comprar</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -163,7 +203,7 @@
             <!--DIV TITULO-->
 
             <div class="conteudo_titulos">
-                <div class="conteudo_titulos_artefatos_imagem" id="moeda_antiga" onclick="clickar">
+                <div class="conteudo_titulos_artefatos_imagem">
                     <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                 </div>
                 <div class="conteudo_titulos_artefatos_texto">
@@ -181,6 +221,10 @@
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
                         <p>Yellow Sign</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao_dir">
+                            <p class="botaoTexto" id="valorCompra11">100</p>
+                            <button class="botaoDir" onclick="atualizarValorCompra('valorCompra11')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 2-->
@@ -190,6 +234,10 @@
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
                         <p>Hound Amulet</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao_dir">
+                            <p class="botaoTexto" id="valorCompra22">100</p>
+                            <button class="botaoDir" onclick="atualizarValorCompra('valorCompra22')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 3-->
@@ -199,6 +247,10 @@
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
                         <p>Curse Whistle</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao_dir">
+                            <p class="botaoTexto" id="valorCompra33">100</p>
+                            <button class="botaoDir" onclick="atualizarValorCompra('valorCompra33')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 4-->
@@ -208,6 +260,10 @@
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
                         <p>Eltdown Shards</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao_dir">
+                            <p class="botaoTexto" id="valorCompra44">100</p>
+                            <button class="botaoDir" onclick="atualizarValorCompra('valorCompra44')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 5-->
@@ -217,6 +273,10 @@
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
                         <p>Elder Key</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao_dir">
+                            <p class="botaoTexto" id="valorCompra55">100</p>
+                            <button class="botaoDir" onclick="atualizarValorCompra('valorCompra55')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 6-->
@@ -226,6 +286,10 @@
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
                         <p>Lagh metal</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao_dir">
+                            <p class="botaoTexto" id="valorCompra66">100</p>
+                            <button class="botaoDir" onclick="atualizarValorCompra('valorCompra66')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 7-->
@@ -235,6 +299,10 @@
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
                         <p>Tulu-metal</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao_dir">
+                            <p class="botaoTexto" id="valorCompra77">100</p>
+                            <button class="botaoDir" onclick="atualizarValorCompra('valorCompra77')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 8-->
@@ -244,6 +312,10 @@
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
                         <p>Emma</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao_dir">
+                            <p class="botaoTexto" id="valorCompra88">100</p>
+                            <button class="botaoDir" onclick="atualizarValorCompra('valorCompra88')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 9-->
@@ -253,6 +325,10 @@
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
                         <p>De Marigny's Clock</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao_dir">
+                            <p class="botaoTexto" id="valorCompra99">100</p>
+                            <button class="botaoDir" onclick="atualizarValorCompra('valorCompra99')">Comprar</button>
+                        </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 10-->
@@ -262,6 +338,10 @@
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
                         <p>Shining Trapezohedron</p>
+                        <div class="conteudo_entidades_elementos_elemento_botao_dir">
+                            <p class="botaoTexto" id="valorCompra1010">100</p>
+                            <button class="botaoDir" onclick="atualizarValorCompra('valorCompra1010')">Comprar</button>
+                        </div>
                     </div>
                 </div>
             </div>
