--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <!--DIV ELEMENTO 7-->
                 <div class="conteudo_entidades_elementos_elemento">
                     <div class="conteudo_entidades_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                        <img src="./imagens/Nyarlathotep2.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Nyarlathotep</p>
