Adicionado novas funçoes javascript

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                         <img src="./imagens/Juk-Shabb.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Juk-Shabb</p>
+                        <p>Juk-Shabb</p><p id="qtd1">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra1">10</p>
                             <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra1');atualizarEntidade('divEntidade1')">Comprar</button>
+                                onclick="atualizarValorCompra('valorCompra1')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -70,11 +70,11 @@
                         <img src="./imagens/ghizguth.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Ghizguth</p>
+                        <p>Ghizguth</p><p id="qtd2">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra2">100</p>
                             <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra2');atualizarEntidade('divEntidade2')">Comprar</button>
+                                onclick="atualizarValorCompra('valorCompra2')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -84,11 +84,11 @@
                         <img src="./imagens/Mordiggian.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Mordiggian</p>
+                        <p>Mordiggian</p><p id="qtd3">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra3">4121</p>
                             <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra3');atualizarEntidade('divEntidade3')">Comprar</button>
+                                onclick="atualizarValorCompra('valorCompra3');">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -98,11 +98,11 @@
                         <img src="./imagens/Hastur.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Hastur</p>
+                        <p>Hastur</p><p id="qtd4">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra4">11727</p>
                             <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra4');atualizarEntidade('divEntidade4')">Comprar</button>
+                                onclick="atualizarValorCompra('valorCompra4')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -112,11 +112,11 @@
                         <img src="./imagens/Cthulhu.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Cthulhu</p>
+                        <p>Cthulhu</p><p id="qtd5">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra5">848309</p>
                             <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra5');atualizarEntidade('divEntidade5')">Comprar</button>
+                                onclick="atualizarValorCompra('valorCompra5')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -126,11 +126,11 @@
                         <img src="./imagens/Ycnagnnisssz .png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Ycnágnnisssz</p>
+                        <p>Ycnágnnisssz</p><p id="qtd6">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra6">1964830</p>
                             <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra6');atualizarEntidade('divEntidade6')">Comprar</button>
+                                onclick="atualizarValorCompra('valorCompra6')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -140,11 +140,11 @@
                         <img src="./imagens/Nyarlathotep2.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Nyarlathotep</p>
+                        <p>Nyarlathotep</p><p id="qtd7">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra7">10363297</p>
                             <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra7');atualizarEntidade('divEntidade7')">Comprar</button>
+                                onclick="atualizarValorCompra('valorCompra7')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -154,39 +154,39 @@
                         <img src="./imagens/Shub-Niggurath.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Shub-Niggurath</p>
+                        <p>Shub-Niggurath</p><p id="qtd8">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra8">569079263</p>
                             <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra8');atualizarEntidade('divEntidade8')">Comprar</button>
+                                onclick="atualizarValorCompra('valorCompra8')">Comprar</button>
                         </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 9-->
                 <div class="conteudo_entidades_elementos_elemento" id="divEntidade9">
                     <div class="conteudo_entidades_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                        <img src="./imagens/Yog-Sothoth.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Yog-Sothoth</p>
+                        <p>Yog-Sothoth</p><p id="qtd9">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra9">9641583125</p>
                             <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra9');atualizarEntidade('divEntidade9')">Comprar</button>
+                                onclick="atualizarValorCompra('valorCompra9')">Comprar</button>
                         </div>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 10-->
                 <div class="conteudo_entidades_elementos_elemento" id="divEntidade10">
                     <div class="conteudo_entidades_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                        <img src="./imagens/Azathoth.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Azathoth</p>
+                        <p>Azathoth</p><p id="qtd10">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra10">23493886388</p>
                             <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra10');atualizarEntidade('divEntidade1010')">Comprar</button>
+                                onclick="atualizarValorCompra('valorCompra10')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
 
             <div class="conteudo_titulos">
                 <div class="conteudo_titulos_artefatos_imagem">
-                    <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                    <img src="./imagens/artefatos.png" alt="img" title="img" class="imagem">
                 </div>
                 <div class="conteudo_titulos_artefatos_texto">
                     <h2>Artefatos</h2>
@@ -228,14 +228,14 @@
                 <!--DIV ELEMENTO 1-->
                 <div class="conteudo_artefatos_elementos_elemento1" id="divArtefato1">
                     <div class="conteudo_entidades_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                        <img src="./imagens/yellow_sign.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
                         <p>Yellow Sign</p>
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra11">10</p>
                             <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra11');atualizarEntidade('divArtefato1')">Comprar</button>
+                                onclick="atualizarArtefato('valorCompra11')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -249,7 +249,7 @@
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra22">100</p>
                             <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra22');atualizarEntidade('divArtefato2')">Comprar</button>
+                                onclick="atualizarArtefato('valorCompra22')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -263,7 +263,7 @@
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra33">449</p>
                             <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra33');atualizarEntidade('divArtefato3')">Comprar</button>
+                                onclick="atualizarArtefato('valorCompra33')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -277,7 +277,7 @@
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra44">3038</p>
                             <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra44');atualizarEntidade('divArtefato4')">Comprar</button>
+                                onclick="atualizarArtefato('valorCompra44')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -291,7 +291,7 @@
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra55">35129</p>
                             <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra55');atualizarEntidade('divArtefato5')">Comprar</button>
+                                onclick="atualizarArtefato('valorCompra55')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -305,7 +305,7 @@
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra66">547435</p>
                             <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra66');atualizarEntidade('divArtefato6')">Comprar</button>
+                                onclick="atualizarArtefato('valorCompra66')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -319,7 +319,7 @@
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra77">2059060</p>
                             <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra77');atualizarEntidade('divArtefato7')">Comprar</button>
+                                onclick="atualizarArtefato('valorCompra77')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -333,7 +333,7 @@
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra88">14239150</p>
                             <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra88');atualizarEntidade('divArtefato8')">Comprar</button>
+                                onclick="atualizarArtefato('valorCompra88')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -347,7 +347,7 @@
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra99">976139168</p>
                             <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra99');atualizarEntidade('divArtefato9')">Comprar</button>
+                                onclick="atualizarArtefato('valorCompra99')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -361,7 +361,7 @@
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra1010">8681402912</p>
                             <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra1010');atualizarEntidade('divArtefato10')">Comprar</button>
+                                onclick="atualizarArtefato('valorCompra1010')">Comprar</button>
                         </div>
                     </div>
                 </div>
