--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <main class="conteudo">
 
+
         <!--SEÇÂO DE ENTIDADES-->
 
         <section class="conteudo_entidades">
@@ -56,11 +57,11 @@
                         <img src="./imagens/Juk-Shabb.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Juk-Shabb</p><p id="qtd1">0</p>
+                        <p>Juk-Shabb</p>
+                        <p id="qtd1">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra1">10</p>
-                            <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra1')">Comprar</button>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra1')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -70,11 +71,11 @@
                         <img src="./imagens/ghizguth.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Ghizguth</p><p id="qtd2">0</p>
+                        <p>Ghizguth</p>
+                        <p id="qtd2">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra2">100</p>
-                            <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra2')">Comprar</button>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra2')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -84,11 +85,11 @@
                         <img src="./imagens/Mordiggian.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Mordiggian</p><p id="qtd3">0</p>
+                        <p>Mordiggian</p>
+                        <p id="qtd3">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra3">4121</p>
-                            <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra3');">Comprar</button>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra3');">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -98,11 +99,11 @@
                         <img src="./imagens/Hastur.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Hastur</p><p id="qtd4">0</p>
+                        <p>Hastur</p>
+                        <p id="qtd4">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra4">11727</p>
-                            <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra4')">Comprar</button>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra4')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -112,11 +113,11 @@
                         <img src="./imagens/Cthulhu.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Cthulhu</p><p id="qtd5">0</p>
+                        <p>Cthulhu</p>
+                        <p id="qtd5">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra5">848309</p>
-                            <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra5')">Comprar</button>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra5')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -126,11 +127,11 @@
                         <img src="./imagens/Ycnagnnisssz .png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Ycnágnnisssz</p><p id="qtd6">0</p>
+                        <p>Ycnágnnisssz</p>
+                        <p id="qtd6">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra6">1964830</p>
-                            <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra6')">Comprar</button>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra6')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -140,11 +141,11 @@
                         <img src="./imagens/Nyarlathotep2.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Nyarlathotep</p><p id="qtd7">0</p>
+                        <p>Nyarlathotep</p>
+                        <p id="qtd7">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra7">10363297</p>
-                            <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra7')">Comprar</button>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra7')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -154,11 +155,11 @@
                         <img src="./imagens/Shub-Niggurath.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Shub-Niggurath</p><p id="qtd8">0</p>
+                        <p>Shub-Niggurath</p>
+                        <p id="qtd8">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra8">569079263</p>
-                            <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra8')">Comprar</button>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra8')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -168,11 +169,11 @@
                         <img src="./imagens/Yog-Sothoth.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Yog-Sothoth</p><p id="qtd9">0</p>
+                        <p>Yog-Sothoth</p>
+                        <p id="qtd9">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra9">9641583125</p>
-                            <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra9')">Comprar</button>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra9')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -182,11 +183,11 @@
                         <img src="./imagens/Azathoth.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Azathoth</p><p id="qtd10">0</p>
+                        <p>Azathoth</p>
+                        <p id="qtd10">0</p>
                         <div class="conteudo_entidades_elementos_elemento_botao">
                             <p class="botaoTexto" id="valorCompra10">23493886388</p>
-                            <button class="botao"
-                                onclick="atualizarValorCompra('valorCompra10')">Comprar</button>
+                            <button class="botao" onclick="atualizarValorCompra('valorCompra10')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -234,8 +235,7 @@
                         <p>Yellow Sign</p>
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra11">10</p>
-                            <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra11')">Comprar</button>
+                            <button class="botaoDir" onclick="atualizarArtefato('valorCompra11')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -248,8 +248,7 @@
                         <p>Hound Amulet</p>
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra22">100</p>
-                            <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra22')">Comprar</button>
+                            <button class="botaoDir" onclick="atualizarArtefato('valorCompra22')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -262,8 +261,7 @@
                         <p>Curse Whistle</p>
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra33">449</p>
-                            <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra33')">Comprar</button>
+                            <button class="botaoDir" onclick="atualizarArtefato('valorCompra33')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -276,8 +274,7 @@
                         <p>Eltdown Shards</p>
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra44">3038</p>
-                            <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra44')">Comprar</button>
+                            <button class="botaoDir" onclick="atualizarArtefato('valorCompra44')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -290,8 +287,7 @@
                         <p>Elder Key</p>
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra55">35129</p>
-                            <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra55')">Comprar</button>
+                            <button class="botaoDir" onclick="atualizarArtefato('valorCompra55')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -304,8 +300,7 @@
                         <p>Lagh metal</p>
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra66">547435</p>
-                            <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra66')">Comprar</button>
+                            <button class="botaoDir" onclick="atualizarArtefato('valorCompra66')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -318,8 +313,7 @@
                         <p>Tulu-metal</p>
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra77">2059060</p>
-                            <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra77')">Comprar</button>
+                            <button class="botaoDir" onclick="atualizarArtefato('valorCompra77')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -332,8 +326,7 @@
                         <p>Emma</p>
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra88">14239150</p>
-                            <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra88')">Comprar</button>
+                            <button class="botaoDir" onclick="atualizarArtefato('valorCompra88')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -346,8 +339,7 @@
                         <p>De Marigny's Clock</p>
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra99">976139168</p>
-                            <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra99')">Comprar</button>
+                            <button class="botaoDir" onclick="atualizarArtefato('valorCompra99')">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -360,8 +352,7 @@
                         <p>Shining Trapezohedron</p>
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra1010">8681402912</p>
-                            <button class="botaoDir"
-                                onclick="atualizarArtefato('valorCompra1010')">Comprar</button>
+                            <button class="botaoDir" onclick="atualizarArtefato('valorCompra1010')">Comprar</button>
                         </div>
                     </div>
                 </div>
