Adicionado metodos para salvamento em cache

--- a/paginas/missoes.html
+++ b/paginas/missoes.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/missoes.css">
     <link rel="stylesheet" type="text/css" href="../css/menu.css">
+    <script type="text/javascript" src="../js/scripts.js"></script>
     <title>Jogo</title>
 </head>
 
@@ -37,7 +38,10 @@
                     <div class="missoes_texto">
                         <p>Meu nome é Amelia Carter, sou uma arqueóloga apaixonada por desvendar os mistérios do passado. Durante uma escavação recente, encontrei uma moeda antiga que parecia estar conectada a uma civilização perdida. Ao estudar a moeda e suas inscrições, percebi que ela continha pistas sobre um tesouro lendário. No entanto, também descobri que essa moeda estava envolta em uma aura de perigo e misticismo. Decidi procurar a ajuda de um detetive habilidoso para me auxiliar na investigação, na esperança de desvendar os segredos ocultos por trás dessa moeda antiga.</p>
                     </div>
-                    <div class="missoes_botao"><button class="botao">Concluir</button></div>
+                    <div class="missoes_botao">
+                        <p>Consiga 10 milhões de moedas</p>
+                        <button class="botao" id="missao1">Concluir</button>
+                    </div>
                 </div>
             </div>
             <div class="missoes_2">
@@ -46,7 +50,10 @@
                     <div class="missoes_texto">
                         <p>Meu nome é Henry Thompson, um bibliotecário idoso e apaixonado por conhecimento. Durante minhas pesquisas, deparei-me com um livro misterioso que despertou meu interesse. Ao examiná-lo, percebi que ele estava ligado a uma série de eventos estranhos ao longo da história. Intrigado, comecei a investigar a origem e o significado desse livro. Logo descobri que ele estava relacionado a uma lenda sombria e misteriosa. Decidi compartilhar minhas descobertas com um detetive experiente, na esperança de que juntos possamos desvendar os segredos ocultos por trás desse livro misterioso.</p>
                     </div>
-                    <div class="missoes_botao"><button class="botao">Concluir</button></div>
+                    <div class="missoes_botao">
+                        <p>Consiga 10 bilhões de moedas</p>
+                        <button class="botao" id="missao2">Concluir</button>
+                    </div>
                 </div>
             </div>
             <div class="missoes_3">
@@ -57,7 +64,10 @@
                             Noites sem fim são preenchidas com murmúrios ininteligíveis e sussurros que parecem ecoar do próprio abismo. As águas escuras e revoltas parecem esconder algo antigo e maligno, algo que desperta de seu sono profundo.
                             Cada vez mais atormentado por essas visões, decidi solicitar ajuda. Enviei uma mensagem desesperada a um investigador especializado em casos sobrenaturais, o detetive Michael Sullivan. Eu sabia que ele era a única esperança de desvendar o mistério que assolava minha mente e minha alma.</p>
                     </div>
-                    <div class="missoes_botao"><button class="botao">Concluir</button></div>
+                    <div class="missoes_botao">
+                        <p>Consiga 10 trilhões de moedas</p>
+                        <button class="botao" id="missao3">Concluir</button>
+                    </div>
                 </div>
             </div>
         </section>
