--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <!--DIV ELEMENTO 2-->
                 <div class="conteudo_artefatos_elementos_elemento" id="divArtefato2">
                     <div class="conteudo_entidades_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                        <img src="./imagens/HoundAmulet.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
                         <p>Hound Amulet</p>
