--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
                 <!--DIV ELEMENTO 3-->
                 <div class="conteudo_artefatos_elementos_elemento" id="divArtefato3">
                     <div class="conteudo_entidades_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                        <img src="./imagens/curse_flute.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
-                        <p>Curse Whistle</p>
+                        <p>Curse Flute</p>
                         <div class="conteudo_entidades_elementos_elemento_botao_dir">
                             <p class="botaoTexto" id="valorCompra33">449</p>
                             <button class="botaoDir" onclick="atualizarArtefato('valorCompra33')">Comprar</button>
