Ajustes no carregamento no banco

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <!--DIV ELEMENTO 4-->
                 <div class="conteudo_artefatos_elementos_elemento" id="divArtefato4">
                     <div class="conteudo_entidades_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                        <img src="./imagens/eltdownShards.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
                         <p>Eltdown Shards</p>
