Adicionado nova imagem

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
     <link rel="stylesheet" type="text/css" href="css/menu.css">
     <script type="text/javascript" src="./js/scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
     <title>Jogo</title>
 </head>
 
@@ -281,7 +282,7 @@
                 <!--DIV ELEMENTO 5-->
                 <div class="conteudo_artefatos_elementos_elemento" id="divArtefato5">
                     <div class="conteudo_entidades_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                        <img src="./imagens/elderKey.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
                         <p>Elder Key</p>
