Ajustes no request de dados do banco

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
         <div class="conteudo_objPrincipal">
             <h1>Moeda Antiga</h1>
-            <h2 id="moeda"></h2>
+            <h2 id="moeda">0</h2>
             <h3 id="mps">0</h3>
             <div class="conteudo_moeda_titulo_imagem" id="moeda_antiga">
                 <img src="./imagens/moedaAntiga.png" alt="img" title="img" class="imagem_moeda">
